<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="app_tittle">Tic Tac Toe</string>
    <string name="new_game">Crear juego</string>
    <string name="existing_games">Juegos disponibles</string>
    <string name="sign_up">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="player_user">"Jugador: "</string>
    <string name="join_game">"Jugar"</string>
    <string name="quit">Salir</string>
    <string name="settings">Ajustes</string>
    <string name="aboutInfo">Tic-Tac-Toe por Juan Guillermo Carvajal</string>
    <string name="first_human">You go first.</string>
    <string name="first_android">Android go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn</string>
    <string name="result_tie">Empate</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_computer_wins">Android won!</string>
    <string name="android_won">Android:</string>
    <string name="human_won">Human:</string>
    <string name="num_ties">Empate:</string>
    <string name="difficulty_easy">Fácil</string>
    <string name="difficulty_harder">Difícil</string>
    <string name="difficulty_expert">Experto</string>
    <string name="difficulty_choose">Seleccione el nivel de dificultad</string>
    <string name="quit_question">¿Está seguro que quiere salir?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="about">Acerca</string>
    <string name="ok">Ok</string>
    <string name="new_game_string">Juego nuevo</string>
    <string name="difficulty">Dificultad</string>
    <string name="title">Tic Tac Toe</string>
</resources>
