<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserOptions">

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewJugador"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:text="@string/player_user"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textCuentaUsuario"
        android:layout_width="309dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJugador" />

    <Button
        android:id="@+id/buttonCrearJuego"
        android:layout_width="287dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:onClick="createGame"
        android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCuentaUsuario" />

    <Button
        android:id="@+id/button2"
        android:layout_width="287dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:onClick="joinGame"
        android:text="@string/existing_games"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCrearJuego"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>